# RAG_MCP_project_ForAlg

./: .env  .gitignore  RAG 檢索失敗解決方案_.txt  README.md  evaluation_questions.json  evaluation_results.json  main.py  parent_chunks_store.json  pyproject.toml  requirements.txt  test_gemini.py
backend/: .gitignore  README.md  evaluation_questions.json  evaluation_results.json  main.py  parent_chunks_store.json  pyproject.toml  rag_mcp_chat.db  requirements.txt  test_gemini.py
frontend/src/: App.css  App.jsx
